2010-07-21    Michael Schwendt <mschwendt@users.sf.net>

	* src/main.c, src/configure.in: port to Audacious 2.4 beta1 API

2010-07-10    Michael Schwendt <mschwendt@users.sf.net>

	* configure.in: endian check is needed
	* src/main.c: make Audacious main window display "4 CHANNELS"
	  instead of an ambiguous bitrate

2010-06-20    Michael Schwendt <mschwendt@users.sf.net>

	* src/configure.c: remove 11025 Hz, it's too low
	* src, src/Main.cpp: remove C++ files and decoder backend
	* src/main.c: copy from Main.cpp, turn into C, add conditional
	  support for Audacious 2.4, use libfc14audiodecoder API
	* src/Config.h.in: rename to lower-case config.h.in
	* audacious*.spec*: removed (don't want to maintain them here)

2009-10-24    Michael Schwendt <mschwendt@users.sf.net>

	* src/Main.cpp: initially return -1 songtime (= unknown time)

2009-10-22    Michael Schwendt <mschwendt@users.sf.net>

	* src/Main.cpp: port to Audacious 2.2 InputPlugin API
	  and simplify by removing play_loop thread
	* src/plugin.c: move C InputPlugin interface here

2009-06-07    Michael Schwendt <mschwendt@users.sf.net>

	* src/Main.cpp: port to Audacious 2.0.1 API
	* src/configure.c: make dialogs raisable and use show_all

2007-11-21    Michael Schwendt <mschwendt@users.sf.net>

	* src/Main.cpp, src/configure.c: port to Audacious 1.4.0 API

2007-03-05    Michael Schwendt <mschwendt@users.sf.net>

	* src/Main.cpp: port to Audacious 1.3.0 InputPlugin API
	and use vfs
